--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .angular-form-print {
 	z-index: 100;
 	position: fixed; 
-	top: 15px; 
+	top: 10%; 
 	right: 15px;
 	width: 350px; 
-	height: 750px;
+	height: 80%;
 
 	margin: 15px; 
 	padding: 15px;
